<resources>
    <string name="app_name">Baking App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recipe_name">Recipe name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="api_base_uri">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/</string>


    <!-- Errors -->
    <string name="api_connection_error_title">Connection Failed</string>
    <string name="api_connection_error_message">Something went wrong… Please check that you are connected to the internet.</string>
    <string name="api_generic_error_message">Something went wrong. Please try again.</string>
    <string name="api_generic_error_title">Oops…</string>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="no_preview_availabe">Image preview unavailable</string>
    <string name="view_ingredients">View Ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_step">StepActivity</string>
    <string name="step">Step</string>
    <string name="steps">Steps</string>
    <string name="media_unavailable">Media unavailable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_done">Step done</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="select_recipe">Select Recipe</string>
    <string name="error_db_query_insert_failed">Sorry, something went wrong. Please try again.</string>
    <string name="recipe_set_as_desired">This recipe has been set as your desired recipe</string>
    <string name="tap_to_select_your_desired_recipe">Tap to select your desired recipe.</string>
    <string name="treat">Treat</string>
</resources>
