<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_picture"
        style="@style/RoundCardViewStyle"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout_step_image"
            android:layout_width="@dimen/recipe_details_image_width"
            android:layout_height="@dimen/recipe_details_image_height"
            >

            <ImageView
                android:id="@+id/imageView_recipe_image"
                android:layout_width="@dimen/recipe_details_image_width"
                android:layout_height="@dimen/recipe_details_image_height"
                android:background="@color/md_grey_100"
                android:contentDescription="@string/recipe_image"
                android:scaleType="fitXY"
                android:src="@drawable/dough" />

            <TextView
                android:id="@+id/textView_image_unavailable"
                android:layout_width="@dimen/recipe_details_image_width"
                android:layout_height="@dimen/recipe_details_image_height"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/no_preview_availabe" />

        </FrameLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/textView_short_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView_picture"
        app:layout_constraintTop_toBottomOf="@+id/textView_step_id"
        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

    <TextView
        android:id="@+id/textView_step_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView_picture"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Step 6" />

    <ImageView
        android:id="@+id/imageView_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/step_done"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView_step_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_step_id"
        app:srcCompat="@drawable/ic_done_green" />


</android.support.constraint.ConstraintLayout>