<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StepMediaFragment">

    <FrameLayout
        android:id="@+id/frameLayout_step_image"
        android:layout_width="@dimen/recipe_details_image_width"
        android:layout_height="@dimen/recipe_details_image_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_step_image"
            android:layout_width="@dimen/recipe_details_image_width"
            android:layout_height="@dimen/recipe_details_image_height"
            android:background="@color/md_grey_100"
            android:contentDescription="@string/recipe_image"
            android:scaleType="fitXY"
            android:src="@drawable/dough" />

        <TextView
            android:id="@+id/textView_image_unavailable"
            android:layout_width="@dimen/recipe_details_image_width"
            android:layout_height="@dimen/recipe_details_image_height"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/no_preview_availabe" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView_short_description"
        android:layout_width="285dp"
        android:layout_height="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frameLayout_step_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_short_description"
        tools:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English." />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_description">

        <TextView
            android:id="@+id/textView_media_unavailable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/transparentLightGrey"
            android:gravity="center"
            android:text="@string/media_unavailable"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exoplayer_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:minHeight="@dimen/video_player_height"
            android:minWidth="@dimen/video_player_width" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>